loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:8: error: ';' expected but 'if' found.
  } if (nbBiscuit<3){
    ^Poucet1:13: error: 'while' expected but '}' found.
	}
        ^